// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestRule body assertions added failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {},
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
    },
    "condition": "must contain a type",
    "docsLink": undefined,
    "error": "request does not have \`type\`",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": false,
    "received": undefined,
    "where": "added request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions added passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "string",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
    },
    "condition": "must contain a type",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "where": "added request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions changed failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "type": "object",
          },
        },
        "before": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "type": "array",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
    },
    "condition": "must not change root body shape",
    "docsLink": undefined,
    "error": "request must not change type",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request shape",
    "passed": false,
    "received": undefined,
    "where": "changed request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions changed passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "description": "abc",
            "type": "array",
          },
        },
        "before": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "description": "123",
            "type": "array",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
    },
    "condition": "must not change root body shape",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request shape",
    "passed": true,
    "received": undefined,
    "where": "changed request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions custom matchers matches failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "object",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
    },
    "condition": "match expected shape",
    "docsLink": undefined,
    "error": "Expected a partial match",
    "expected": "{\\"schema\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"id\\":{\\"type\\":\\"string\\"}}}}",
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": false,
    "received": "{\\"schema\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"notid\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"}}}}",
    "where": "added request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions custom matchers matches inverted assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "object",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
    },
    "condition": "not match expected shape",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "where": "added request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions custom matchers matches passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "object",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
    },
    "condition": "match expected shape",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "where": "added request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions custom matchers matchesOneOf failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "object",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
    },
    "condition": "match expected shape",
    "docsLink": undefined,
    "error": "Expected at least one partial match",
    "expected": "[{\\"schema\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"id\\":{\\"type\\":\\"string\\"}}}},{\\"schema\\":{\\"type\\":\\"array\\",\\"items\\":{}}}]",
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": false,
    "received": "{\\"schema\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"notid\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"}}}}",
    "where": "added request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions custom matchers matchesOneOf inverted assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "object",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
    },
    "condition": "not match expected shape",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "where": "added request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions custom matchers matchesOneOf passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "object",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
    },
    "condition": "match expected shape",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "where": "added request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions removed failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "removed",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
      "removed": Object {
        "before": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "type": "array",
          },
        },
      },
    },
    "condition": "cannot remove bodies with array schema",
    "docsLink": undefined,
    "error": "cannot remove bodies with array schema",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request removal",
    "passed": false,
    "received": undefined,
    "where": "removed request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions removed passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "removed",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
      "removed": Object {
        "before": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "type": "string",
          },
        },
      },
    },
    "condition": "cannot remove bodies with array schema",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request removal",
    "passed": true,
    "received": undefined,
    "where": "removed request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions requirement failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
      "value": Object {
        "contentType": "application/json",
        "flatSchema": Object {},
      },
    },
    "condition": "must contain a type",
    "docsLink": undefined,
    "error": "request body does not have \`type\`",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": false,
    "received": undefined,
    "where": "requirement for request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule body assertions requirement passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
      "value": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "string",
        },
      },
    },
    "condition": "must contain a type",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "where": "requirement for request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule property assertions added failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "hello",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "hello",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/hello",
        "kind": "field",
      },
      "value": Object {
        "flatSchema": Object {},
        "key": "hello",
        "required": false,
      },
    },
    "condition": "must contain a type",
    "docsLink": undefined,
    "error": "field does not have \`type\`",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": false,
    "received": undefined,
    "where": "requirement for property: hello request body: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule property assertions added passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "hello",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "hello",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/hello",
        "kind": "field",
      },
      "value": Object {
        "flatSchema": Object {
          "type": "string",
        },
        "key": "hello",
        "required": false,
      },
    },
    "condition": "must contain a type",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "where": "requirement for property: hello request body: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule property assertions changed failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "number",
          },
          "key": "hello",
          "required": false,
        },
        "before": Object {
          "flatSchema": Object {
            "format": "uuid",
            "type": "string",
          },
          "key": "hello",
          "required": false,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "items",
            "hello",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "items",
          "hello",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/items/properties/hello",
        "kind": "field",
      },
    },
    "condition": "must not change property type",
    "docsLink": undefined,
    "error": "must not change type",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "property type",
    "passed": false,
    "received": undefined,
    "where": "changed property: items/hello request body: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule property assertions changed passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "format": "date",
            "type": "string",
          },
          "key": "hello",
          "required": false,
        },
        "before": Object {
          "flatSchema": Object {
            "format": "uuid",
            "type": "string",
          },
          "key": "hello",
          "required": false,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "items",
            "hello",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "items",
          "hello",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/items/properties/hello",
        "kind": "field",
      },
    },
    "condition": "must not change property type",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "property type",
    "passed": true,
    "received": undefined,
    "where": "changed property: items/hello request body: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule property assertions removed failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "removed",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "goodbye",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "goodbye",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/goodbye",
        "kind": "field",
      },
      "removed": Object {
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "goodbye",
          "required": true,
        },
      },
    },
    "condition": "cannot remove bodies required property",
    "docsLink": undefined,
    "error": "cannot remove bodies with array schema",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request removal",
    "passed": false,
    "received": undefined,
    "where": "removed property: goodbye request body: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule property assertions removed passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "removed",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "goodbye",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "goodbye",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/goodbye",
        "kind": "field",
      },
      "removed": Object {
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "goodbye",
          "required": false,
        },
      },
    },
    "condition": "cannot remove bodies required property",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request removal",
    "passed": true,
    "received": undefined,
    "where": "removed property: goodbye request body: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule property assertions requirement failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "hello",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "hello",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/hello",
        "kind": "field",
      },
      "value": Object {
        "flatSchema": Object {},
        "key": "hello",
        "required": false,
      },
    },
    "condition": "must contain a type",
    "docsLink": undefined,
    "error": "field does not have \`type\`",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": false,
    "received": undefined,
    "where": "requirement for property: hello request body: application/json in operation: GET /api/users",
  },
]
`;

exports[`RequestRule property assertions requirement passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "hello",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "hello",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/hello",
        "kind": "field",
      },
      "value": Object {
        "flatSchema": Object {
          "type": "string",
        },
        "key": "hello",
        "required": false,
      },
    },
    "condition": "must contain a type",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "where": "requirement for property: hello request body: application/json in operation: GET /api/users",
  },
]
`;
